common_small_refactoring